updated quality-monitor.yml